tests/miniJava/neg/003041_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = void new int [ 0 ] ; } }
